# mspm0_debugger

./: CMakeLists.txt  DESIGN.md  README.md  hal.h  main.c
cmake/toolchains/: arm-gcc.cmake  find_compiler.cmake
include/: adiv5.h  board.h  cortex.h  jtag.h  probe.h  riscv.h  rsp.h  swd_bitbang.h  target.h  target_mem.h
linker/: mspm0c1105.lds  mspm0g5187.lds
src/: adiv5.c  board_mspm0c1104.c  board_mspm0c1105.c  board_mspm0g5187.c  cortex.c  jtag_bitbang.c  probe.c  riscv.c  rsp.c  swd_bitbang.c  target.c  target_mem.c
src/usb/: tusb_config.h  usb_descriptors.c
startup/: startup_mspm0c1105_c1106_gcc.c
uart_echo/: .ccsproject  .cproject  .project  uart_echo.tar
uart_echo/Debug/.clangd/: compile_commands.json
uart_echo/targetConfigs/: MSPM0L1116.ccxml
